[package]
name = "executor"
version = "0.1.0"
authors = ["seanc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmi = { git = "https://github.com/pepyakin/wasmi" }
rmp-serde = { git = "https://github.com/3Hren/msgpack-rust" }
json-patch = { git = "https://github.com/idubrov/json-patch" }
serde_json = "1.0"
serde = { git = "https://github.com/mesalock-linux/serde-sgx", default-features = false, features=["serde_derive"] }
pwasm-utils = { git = "https://github.com/paritytech/wasm-utils", default-features = false }
parity-wasm = { git = "https://github.com/paritytech/parity-wasm", default-features = false }